--- a/app/src/main/res/layout/view_todo.xml
+++ b/app/src/main/res/layout/view_todo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ccamacho.udemycoursejetpack.views.TodoView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -28,4 +29,4 @@
         android:layout_marginStart="@dimen/item_margin_default"
         android:layout_marginEnd="@dimen/item_margin_default"
         tools:text="Ola Mundo"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.ccamacho.udemycoursejetpack.views.TodoView>
