--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryLight">#AD62AA</color>
-    <color name="colorPrimary">#4A47A3</color>
-    <color name="colorPrimaryDark">#413C69</color>
-    <color name="colorAccent">#EAB9C9</color>
+    <color name="colorPrimaryLight">#BBE1FA</color>
+    <color name="colorPrimary">#3282B8</color>
+    <color name="colorPrimaryDark">#0F4C75</color>
+    <color name="colorAccent">#1B262C</color>
+
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="lightGray">#DFDFDF</color>
 </resources>
