--- a/app/src/main/res/layout/fragment_tasks_list.xml
+++ b/app/src/main/res/layout/fragment_tasks_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ccamacho.udemycoursejetpack.tasks.TasksListView
+<com.ccamacho.udemycoursejetpack.tasks.TaskListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tasks.TasksListFragment">
+    tools:context=".tasks.TaskListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -19,4 +19,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</com.ccamacho.udemycoursejetpack.tasks.TasksListView>
+</com.ccamacho.udemycoursejetpack.tasks.TaskListView>
