Implementação da logica para incluir task (ainda não está salvando)

--- a/app/src/main/res/layout/view_create_todo.xml
+++ b/app/src/main/res/layout/view_create_todo.xml
@@ -7,6 +7,7 @@
 
     <ImageView
         android:id="@+id/image_view"
+        android:src="@drawable/ic_plus"
         android:layout_width="@dimen/image_icon_default"
         android:layout_height="@dimen/image_icon_default"
         app:layout_constraintStart_toStartOf="parent"
