--- a/app/src/main/res/layout/view_create_task.xml
+++ b/app/src/main/res/layout/view_create_task.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.ccamacho.udemycoursejetpack.views.CreateTaskView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,4 +13,4 @@
         android:background="@color/transparent"
         android:hint="@string/hint_add_task"/>
 
-</LinearLayout>
+</com.ccamacho.udemycoursejetpack.views.CreateTaskView>
