--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -7,11 +7,25 @@
 
     <TextView
         android:id="@+id/description_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/item_margin_default"
         android:layout_marginTop="@dimen/item_margin_default"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/image_button"/>
+
+    <ImageButton
+        android:id="@+id/image_button"
+        android:src="@drawable/ic_delete"
+        android:layout_width="@dimen/image_icon_default"
+        android:layout_height="@dimen/image_icon_default"
+        android:background="@color/transparent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/description_view"
+        app:layout_constraintBottom_toBottomOf="@id/description_view"
+        android:layout_marginEnd="@dimen/item_margin_default"/>
+
 </com.ccamacho.udemycoursejetpack.views.NoteView>
